--- a/sample/src/samples/slider/Common.css
+++ b/sample/src/samples/slider/Common.css
@@ -2,7 +2,14 @@
 .frame {
    padding: 30px 20px;   
    color: #5C5C5C;
-   width:50%;
+   width:55%;
    margin: 0 auto;
 }
 
+.rangetxt{
+margin-bottom:20px;
+}
+
+.minrangetxt{
+margin-bottom:27px;
+}
